Fixed styling/spacing in projects

--- a/styles/bloc-jams.css
+++ b/styles/bloc-jams.css
@@ -21,7 +21,7 @@ header {
 /* tablet div sizing */
 @media screen and (max-width: 900px) {
   .front-end-development > div {
-    width: 100%;
+    width: 90%;
   }
 }
 
