--- a/styles/projects.css
+++ b/styles/projects.css
@@ -224,6 +224,13 @@ li {
   margin: 0 auto;
 }
 
+/* tablet text styling */
+@media screen and (max-width: 900px) {
+  .competitive-analysis h3, .competitive-analysis h4, .project-process > div p, .project-process > div h5, .project-process > div ul, .user-research h4, .personas h4, .information-architecture > div h4, .information-architecture > div h5, .information-architecture > div p, .information-architecture > div ul, .wireframes h4, .wireframes p, .clickable-prototype-testing h4, .clickable-prototype-testing p, .clickable-prototype-testing ul {
+    width: 100%;
+  }
+}
+
 .branding {
   padding-top: 10vh;
 }
